added score states and functions and finalized project

--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,8 @@
     <div id="root">
       
     </div>
+    <footer>
+      <a href="http://www.freepik.com">Designed by Freepik</a>
+    </footer>
   </body>
 </html>
